--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,5 +3,5 @@ import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="David Bertet">
-  <main></main>
+  <main>Hello world!</main>
 </Layout>
