--- a/src/components/ConnectWithMe.astro
+++ b/src/components/ConnectWithMe.astro
@@ -2,7 +2,7 @@
 import { Icon } from "astro-icon";
 ---
 
-<div class="mb-3 text-2xl text-[#9cb9c7] md:mb-4 md:text-4xl">
+<div class="mb-3 text-2xl text-[#bed1da] md:mb-4 md:text-4xl">
   Connect with me!
 </div>
 
@@ -10,13 +10,13 @@ import { Icon } from "astro-icon";
   <a
     href="https://github.com/DavidBertet"
     target="_blank"
-    class="block rounded-full border-[0.5px] border-gray-300 p-2 duration-200 hover:bg-[#9cb9c7] hover:text-white"
+    class="block rounded-full border-[0.5px] border-gray-300 p-2 duration-200 hover:bg-[#bed1da] hover:text-white"
     ><Icon class="aspect-square w-10" name="mdi:github" />
   </a>
   <a
     href="https://www.linkedin.com/in/davidbertet"
     target="_blank"
-    class="block rounded-full border-[0.5px] border-gray-300 p-2 duration-200 hover:bg-[#9cb9c7] hover:text-white"
+    class="block rounded-full border-[0.5px] border-gray-300 p-2 duration-200 hover:bg-[#bed1da] hover:text-white"
     ><Icon class="aspect-square w-10" name="mdi:linkedin" />
   </a>
 </div>
