--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,21 +2,115 @@
 
 ---
 
-<footer class="h-40 text-center text-gray-500 bg-purple-800">
-  <form method="POST">
-    <div>
-      <input type="text" name="name" placeholder="Name" />
-    </div>
-    <div>
-      <input type="email" name="email" placeholder="Email" />
-    </div>
-    <div>
-      <textarea name="message" placeholder="Message"></textarea>
-    </div>
-    <div>
-      <button type="submit">Send</button>
-    </div>
-  </form>
+<footer class="bg-black bg-opacity-90 px-8 py-16 text-white">
+  <div class="container mx-auto">
+    <div class="flex flex-wrap">
+      <div class="mb-8 w-full md:w-1/2 lg:w-2/5">
+        <div class="me-6">
+          <h4 class="text-m mb-2 font-semibold uppercase text-gray-500">
+            Get in touch
+          </h4>
+          <h2 class="mb-4 text-4xl font-light">Have an Project in Mind?</h2>
+        </div>
+      </div>
 
-  <div>© David Bertet 2023</div>
+      <div class="w-full md:w-1/2 lg:w-3/5">
+        <form id="contact-form" onsubmit="onFormSubmit(event)">
+          <div class="-mx-2 flex flex-wrap">
+            <div class="mb-4 w-full px-2 md:w-1/3">
+              <input
+                id="name"
+                name="name"
+                class="w-full rounded-lg border border-white border-opacity-50 bg-transparent px-4 py-3 focus:border-opacity-100 focus:outline-none"
+                type="text"
+                placeholder="Name"
+              />
+            </div>
+            <div class="mb-4 w-full px-2 md:w-2/3">
+              <input
+                id="email"
+                required
+                type="email"
+                pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$"
+                name="email"
+                class="w-full rounded-lg border border-white border-opacity-50 bg-transparent px-4 py-3 focus:border-opacity-100 focus:outline-none"
+                type="text"
+                placeholder="Email *"
+              />
+            </div>
+            <div class="mb-4 w-full px-2">
+              <textarea
+                id="message"
+                required
+                name="message"
+                class="w-full rounded-lg border border-white border-opacity-50 bg-transparent px-4 py-3 focus:border-opacity-100 focus:outline-none"
+                rows="5"
+                placeholder="Tell me about your project *"></textarea>
+            </div>
+            <div
+              class="g-recaptcha"
+              data-sitekey={import.meta.env.RECAPTCHA_CLIENT_KEY} 
+              data-size="invisible"
+              data-callback="onRecaptchaReceived"
+              data-action="submit"></div>
+              
+            <div class="flex w-full px-2 text-right">
+              <div id="contact-message" class="flex-grow pe-4"></div>
+              <button
+                class="btn rounded-lg bg-white px-6 py-3 text-sm font-semibold uppercase text-gray-800"                
+              >
+                Submit
+              </button>
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+
+  <script src="https://www.google.com/recaptcha/api.js"></script>
+
+  <script is:inline>
+    function onFormSubmit(event) {
+      event.preventDefault();
+      grecaptcha.reset();
+      grecaptcha.execute();
+    }
+
+    async function onRecaptchaReceived(token) {
+      var result;
+      try {
+        const data = JSON.stringify(Object.fromEntries(new FormData(document.getElementById("contact-form"))));
+        const res = await fetch("api/email", {
+            method: "POST",
+            headers: {
+              "Content-Type": "application/json",
+            },
+            body: data,
+        })
+        result = await res.json();
+      } catch {}
+
+      if (result?.status === "ok") {
+        document.getElementById("contact-message").innerHTML = `
+          <div class="bg-green-500 text-white rounded-lg px-6 py-3">
+            <p class="text-sm">Message sent successfully!</p>
+          </div>
+        `;
+        document.getElementById("contact-form").reset();
+      } else {
+        document.getElementById("contact-message").innerHTML = `
+          <div class="bg-red-500 text-white rounded-lg px-6 py-3">
+            <p class="text-sm">Something went wrong. Please try again later.</p>
+          </div>
+        `;
+      }
+    }
+  </script>
 </footer>
+
+<style is:global>
+  .grecaptcha-badge { 
+    visibility: hidden;
+  }
+</style>
