--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -5,24 +5,18 @@ const skills = await Astro.glob("../content/skills/*.md");
 const experiences = await Astro.glob("../content/experiences/*.md");
 const perso = await Astro.glob("../content/perso/*.md");
 
-import { Resvg } from "@resvg/resvg-js";
+import { createCanvas } from "@napi-rs/canvas";
 
-// Use images to display email and phone number
-const emailSvg = `
-  <svg xmlns="http://www.w3.org/2000/svg" width="280" height="35" viewBox="0 0 175 20">
-    <text fill="black" font-family="ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,'Helvetica Neue',Arial,'Noto Sans',sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol','Noto Color Emoji'" font-size="16">
-      <tspan x="0" y="15">${import.meta.env.EMAIL}</tspan>
-    </text>
-  </svg>`
-const emailImage = new Resvg(emailSvg).render().asPng().toString("base64");
-
-const phoneSvg = `
-  <svg xmlns="http://www.w3.org/2000/svg" width="280" height="26" viewBox="0 0 175 20">
-    <text fill="black" font-family="ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,'Helvetica Neue',Arial,'Noto Sans',sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol','Noto Color Emoji'" font-size="16">
-      <tspan x="86" y="15">${import.meta.env.PHONE}</tspan>
-    </text>
-  </svg>`
-const phoneImage = new Resvg(phoneSvg).render().asPng().toString("base64");
+// Use images to display email
+const canvas = createCanvas(400, 40)
+const ctx = canvas.getContext('2d')
+ctx.font = "37px ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,'Helvetica Neue',Arial,'Noto Sans',sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol','Noto Color Emoji'"
+ctx.fillText(import.meta.env.EMAIL, 0, 32)
+const emailImage = canvas.toDataURL('image/png')
+ctx.clearRect(0, 0, 400, 40)
+ctx.font = "34px ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,'Helvetica Neue',Arial,'Noto Sans',sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol','Noto Color Emoji'"
+ctx.fillText(import.meta.env.PHONE, 170, 30)
+const phoneImage = canvas.toDataURL('image/png')
 
 ---
 <!DOCTYPE html>
@@ -46,7 +40,7 @@ const phoneImage = new Resvg(phoneSvg).render().asPng().toString("base64");
 </head>
 <body class="bg-white font-sans h-resume w-[1100px] m-auto p-4">
   <div class=" flex flex-row items-center">
-    <div class="flex-grow pe-20">
+    <div class="pe-20">
       <h1 class="text-4xl font-bold p-name">David Bertet</h1>
       <p class="font-medium text-gray-500 p-note mt-4">
         Software architect proficient on both iOS and Android. Tackle roadblocks by using automation and building toolings. Able to quickly learn new technologies.<br />
@@ -56,10 +50,10 @@ const phoneImage = new Resvg(phoneSvg).render().asPng().toString("base64");
     <section>
       <ul class="space-y-2">
         <li class="flex place-content-end">
-          <a href="redirect/email"><img src=`data:image/png;base64,${emailImage}`/></a><Icon class="flex-shrink-0 aspect-square w-5 ms-1 text-blue-500" name="mdi:email" />
+          <a href="redirect/email"><img class="w-[200px]" src={emailImage}/></a><Icon class="flex-shrink-0 aspect-square w-5 ms-1 text-blue-500" name="mdi:email" />
         </li>
         <li class="flex place-content-end">
-          <img src=`data:image/png;base64,${phoneImage}` /><Icon class="flex-shrink-0 aspect-square w-5 ms-1 text-blue-500" name="mdi:phone" />
+          <img class="w-[200px]" src={phoneImage} /><Icon class="flex-shrink-0 aspect-square w-5 ms-1 text-blue-500" name="mdi:phone" />
         </li>
         <li class="flex place-content-end">
           <a href="https://david.bertet.fr" target="_blank" rel="noopener noreferrer">david.bertet.fr</a><Icon class="aspect-square w-5 ms-1 text-blue-500" name="mdi:web" />
