--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -5,17 +5,18 @@ const skills = await Astro.glob("../content/skills/*.md");
 const experiences = await Astro.glob("../content/experiences/*.md");
 const perso = await Astro.glob("../content/perso/*.md");
 
-import { createCanvas } from "@napi-rs/canvas";
+import { createCanvas, GlobalFonts } from "@napi-rs/canvas";
 
 // Use images to display email
+GlobalFonts.registerFromPath('./build_fonts/Roboto.ttf')
 const canvas = createCanvas(400, 40)
 const ctx = canvas.getContext('2d')
-ctx.font = "37px ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji"
+ctx.font = "37px Roboto"
 ctx.fillText(import.meta.env.EMAIL, 0, 32)
 const emailImage = canvas.toDataURL('image/png')
 ctx.clearRect(0, 0, 400, 40)
-ctx.font = "34px ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji"
-ctx.fillText(import.meta.env.PHONE, 170, 30)
+ctx.font = "34px Roboto"
+ctx.fillText(import.meta.env.PHONE, 168, 30)
 const phoneImage = canvas.toDataURL('image/png')
 
 ---
@@ -26,6 +27,7 @@ const phoneImage = canvas.toDataURL('image/png')
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Resume</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.15/dist/tailwind.min.css">
+  <link rel="icon" type="image/png" href="/new/favicon.png">
   <style>
     @media print {
       body {
@@ -41,7 +43,7 @@ const phoneImage = canvas.toDataURL('image/png')
 <body class="bg-white font-sans h-resume w-[1100px] m-auto p-4">
   <div class=" flex flex-row items-center">
     <div class="pe-20">
-      <h1 class="text-4xl font-bold p-name">David Bertet</h1>
+      <h1 class="text-5xl font-bold p-name">David Bertet</h1>
       <p class="font-medium text-gray-500 p-note mt-4">
         Software architect proficient on both iOS and Android. Tackle roadblocks by using automation and building toolings. Able to quickly learn new technologies.<br />
         Committed to delivering pragmatic & high-quality solutions.</p>
