Fix footer contact form

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -67,7 +67,7 @@
     </div>
   </div>
 
-  <script src="https://www.google.com/recaptcha/api.js"></script>
+  <script is:inline src="https://www.google.com/recaptcha/api.js"></script>
 
   <script is:inline>
     function onFormSubmit(event) {
