Make it main portfolio!

--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -27,7 +27,7 @@ const phoneImage = canvas.toDataURL('image/png')
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Resume</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.15/dist/tailwind.min.css">
-  <link rel="icon" type="image/png" href="/new/favicon.png">
+  <link rel="icon" type="image/png" href="favicon.png">
   <style>
     @media print {
       body {
