--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -21,7 +21,7 @@ const pngData = canvas.toDataURL('image/png')
         >Email</span
       >
       <div class="md:self-center w-[200px]">
-        <a href=`${import.meta.env.BASE_URL}/redirect/email`>
+        <a href=`${import.meta.env.BASE_URL}redirect/email`>
           <img src={pngData} alt="email" />
         </a>
       </div>
