--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -80,7 +80,7 @@
       var result;
       try {
         const data = JSON.stringify(Object.fromEntries(new FormData(document.getElementById("contact-form"))));
-        const res = await fetch(`${import.meta.env.BASE_URL}/api/email`, {
+        const res = await fetch(`${import.meta.env.BASE_URL}api/email`, {
             method: "POST",
             headers: {
               "Content-Type": "application/json",
