--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -45,8 +45,11 @@ const phoneImage = canvas.toDataURL('image/png')
     <div class="pe-20">
       <h1 class="text-5xl font-bold p-name">David Bertet</h1>
       <p class="font-medium text-gray-500 p-note mt-4">
-        Software architect proficient on both iOS and Android. Tackle roadblocks by using automation and building toolings. Able to quickly learn new technologies.<br />
-        Committed to delivering pragmatic & high-quality solutions.</p>
+        Software architect delivering high-quality solutions. Proven track record in both iOS and Android.<br />
+        I use my skills to grow the team, either with mentorship, automation or tooling.<br />
+        Adaptable to any technologies thanks to constant practice on side projects.<br />
+        I'm eager to tackle new challenges alongside a world-class team of engineers.
+      </p>
     </div>
 
     <section>
