--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -42,7 +42,7 @@ const phoneImage = canvas.toDataURL('image/png')
 </head>
 <body class="bg-white font-sans h-resume w-[1100px] m-auto p-4">
   <div class=" flex flex-row items-center">
-    <div class="pe-20">
+    <div class="pe-20 grow">
       <h1 class="text-5xl font-bold p-name">David Bertet</h1>
       <p class="font-medium text-gray-500 p-note mt-4">
         Software architect delivering high-quality solutions. Proven track record in both iOS and Android.<br />
