Add school projects

--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -46,7 +46,7 @@ const phoneImage = canvas.toDataURL('image/png')
       <h1 class="text-5xl font-bold p-name">David Bertet</h1>
       <p class="font-medium text-gray-500 p-note mt-4">
         Software architect delivering high-quality solutions. Proven track record in both iOS and Android.<br />
-        I use my skills to grow the team, either with mentorship, automation or tooling.<br />
+        Also contribute to the team and company growth through mentorship, automation, and tooling.<br />
         Adaptable to any technologies thanks to constant practice on side projects.<br />
         I'm eager to tackle new challenges alongside a world-class team of engineers.
       </p>
