--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,15 +13,21 @@ const { title } = Astro.props;
     <meta name="description" content="David Bertet portfolio" />
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/png" href="favicon.png">
+
+    <!-- Social sharing -->
+    <meta property="og:image" content="https://david.bertet.fr/home.jpg">
+    <meta property="og:image:type" content="image/jpeg">
+    <meta property="og:image:width" content="1024">
+    <meta property="og:image:height" content="1024">
+
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Josefin+Sans"
     />
-    <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
   </head>
   <body class="font-body">
     <slot />
   </body>
 </html>
-<style is:global></style>
+
