--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -42,18 +42,18 @@ const phoneImage = canvas.toDataURL('image/png')
 </head>
 <body class="bg-white font-sans h-resume w-[1100px] m-auto p-4">
   <div class=" flex flex-row items-center">
-    <div class="pe-20 grow">
+    <div class="pe-14 grow">
       <h1 class="text-5xl font-bold p-name">David Bertet</h1>
       <p class="font-medium text-gray-500 p-note mt-4">
-        Software architect delivering high-quality solutions. Proven track record in both iOS and Android.<br />
-        Also contribute to the team and company growth through mentorship, automation, and tooling.<br />
-        Adaptable to any technologies thanks to constant practice on side projects.<br />
-        I'm eager to tackle new challenges alongside a world-class team of engineers.
+        Results-driven software architect with proven track record in crafting top-tier solutions on iOS & Android.<br />
+        I drive team and company growth through effective mentorship, automation, and strategic tooling.<br />
+        Continuously refining my skills through side projects, I remain adaptable to emerging technologies.<br />
+        Looking for new challenges, I'm eager to contribute through innovative problem-solving and collaboration.
       </p>
     </div>
 
     <section>
-      <ul class="space-y-2">
+      <ul class="space-y-2 mt-6">
         <li class="flex place-content-end">
           Sunnyvale, CA
           <Icon class="flex-shrink-0 aspect-square w-5 ms-1 text-blue-500" name="mdi:location" />
@@ -81,7 +81,7 @@ const phoneImage = canvas.toDataURL('image/png')
     <section>
       <div>
         <h2 class="text-2xl font-bold border-b-blue-400 border-b-2">Hackthon</h2>
-        <p class="text-gray-600 mt-2">I love creating a workable product in a constraint environment. <br/>I participated to 8 hackathons, 5 times finalist, and won one.</p>
+        <p class="text-gray-600 mt-2">Close collaboration in a constraint environment enforces efficiency.<br/>I participated to 8 hackathons, 5 times finalist, and won one.</p>
       </div>
 
       <div>
