--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -56,7 +56,7 @@
             <div class="flex w-full px-2 text-right">
               <div id="contact-message" class="flex-grow pe-4"></div>
               <button
-                class="btn rounded-lg bg-white px-6 py-3 text-sm font-semibold uppercase text-gray-800"                
+                class="rounded-lg bg-white px-6 py-3 text-sm font-semibold uppercase text-gray-800"                
               >
                 Submit
               </button>
