--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -45,7 +45,7 @@ const phoneImage = canvas.toDataURL('image/png')
     <div class="pe-14 grow">
       <h1 class="text-5xl font-bold p-name">David Bertet</h1>
       <p class="font-medium text-gray-500 p-note mt-4">
-        Results-driven software architect with proven track record in crafting top-tier solutions on iOS & Android.<br />
+        Results-driven software engineer with proven track record in crafting top-tier solutions on iOS & Android.<br />
         I drive team and company growth through effective mentorship, automation, and strategic tooling.<br />
         Continuously refining my skills through side projects, I remain adaptable to emerging technologies.<br />
         Looking for new challenges, I'm eager to contribute through innovative problem-solving and collaboration.
@@ -80,8 +80,8 @@ const phoneImage = canvas.toDataURL('image/png')
   <main class="grid grid-cols-[1fr_2.5fr] gap-10 mt-8">
     <section>
       <div>
-        <h2 class="text-2xl font-bold border-b-blue-400 border-b-2">Hackthon</h2>
-        <p class="text-gray-600 mt-2">Close collaboration in a constraint environment enforces efficiency.<br/>I participated to 8 hackathons, 5 times finalist, and won one.</p>
+        <h2 class="text-2xl font-bold border-b-blue-400 border-b-2">Hackathon</h2>
+        <p class="text-gray-600 mt-2">Close collaboration in a constrained environment enforces efficiency.<br/>I participated in 8 hackathons, 5 times finalist, and won one.</p>
       </div>
 
       <div>
@@ -139,7 +139,7 @@ const phoneImage = canvas.toDataURL('image/png')
                   </div>
                 </div>
 
-                <div class="mt-2 prose prose-li:mb-1 prose-li:mt-1 max-w-none">
+                <div class="mt-2 prose max-w-none">
                   <experience.Content />
                 </div>
               </div>
