--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -34,7 +34,7 @@ const pngData = canvas.toDataURL('image/png')
       <span class="block w-32 text-xl font-bold text-gray-800 md:inline-block"
         >Current role</span
       >
-       Software architect @ Quotient Technology Inc.
+       Software engineer
     </li>
   </ul>
 </div>
